# AwesomePrelude

./: AwesomePrelude.cabal  LICENSE  README.md
presentation/: ArithExpr.lhs  BoolLike.lhs  Conclusion.lhs  Expr.lhs  Makefile  RealExpr.lhs  Value.lhs  code.fmt  presentation.lhs
src/: AwesomePrelude.hs  CsPrelude.hs  HaskellPrelude.hs  JsPrelude.hs  Main.hs  test.js
src/Compiler/: CodeGen.hs  CommonDefinitions.hs  Compiler.hs  Expr.hs  Expression.hs  FreeVariables.hs  Generics.hs  Inliner.hs  Instantiate.hs  InstantiateLambdas.hs  LambdaLifting.lhs  LiftClosedApplications.hs  LiftClosures.hs  LiftDefinitions.hs  LiftLambdas.hs  Pipeline.hs  Raw.hs  ReindexParamaters.hs  Val.hs
src/Compiler/Unused/: CSE.hs  CodeGen.hs  Dot.hs  FreeVars.hs  Inliner.hs  LambdaLifting.lhs  Renamer.hs
src/Control/: Function.hs
src/Data/: ABool.hs  AEither.hs  AMaybe.hs  AwesomeList.hs  Tuple.hs
src/Generic/: Prelude.hs
src/Generic/Control/: Alternative.hs  Applicative.hs  Category.hs  Function.hs  Functor.hs  Monad.hs  MonadPlus.hs  Monoid.hs  Pointed.hs
src/Generic/Data/: Bool.hs  Either.hs  Eq.hs  List.hs  Maybe.hs  Num.hs  Number.hs  Ord.hs  Tuple.hs
src/Lang/: Cs.hs  Csharp.hs  Haskell.hs  JavaScript.hs  Value.hs
src/dhug-feb-2010/: BoolLike.lhs  Conclusion.lhs  Makefile  Value.lhs  presentation.lhs
