name:                AwesomePrelude
version:             0.1.0
synopsis:            Alternative Prelude, for designing deeply embedded DSLs
description:         This alternative prelude is very much like the original
                     Haskell Prelude, except that all data types have been
                     replaced with type classes. This makes this prelude more
                     extensible: Bring your own boolean implementation!
license:             BSD3
license-file:        LICENSE
author:              Chris Eidhof,
                     Tom Lokhorst,
                     Sebastiaan Visser
maintainer:          Tom Lokhorst <tom@lokhorst.eu>
homepage:            http://tom.lokhorst.eu/awesome-prelude
stability:           Stable
category:            Data
build-type:          Simple
cabal-version:       >= 1.6

library
  hs-source-dirs:    src
  exposed-modules:   Compiler.Pipeline,
                     Generic.Control.Alternative
                     Generic.Control.Applicative
                     Generic.Control.Category
                     Generic.Control.Function
                     Generic.Control.Functor
                     Generic.Control.Monad
                     Generic.Control.MonadPlus
                     Generic.Control.Monoid
                     Generic.Control.Pointed
                     Generic.Data.Bool
                     Generic.Data.Either
                     Generic.Data.Eq
                     Generic.Data.List
                     Generic.Data.Maybe
                     Generic.Data.Num
                     Generic.Data.Ord
                     Generic.Data.Tuple
                     Generic.Prelude,
                     Lang.JavaScript
  build-depends:     base >= 3 && < 5,
                     containers >= 0.3 && < 0.4,
                     monads-fd >= 0.0.0.1 && < 0.0.1,
                     transformers >= 0.1.4 && < 0.1.5

